--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@sveltejs/kit": "next",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
-    "svelte": "^3.42.6"
+    "svelte": "^3.42.6",
+    "vite-plugin-windicss": "^1.5.1"
   },
   "type": "module"
 }
